# Nucleo-stm32l0-quickstart

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
